@@ -1,6 +1,9 @@
 devel
 -----
 
+* Fixed issue #12363: Foxx HTTP API upgrade/replace always enables
+  development mode.
+
 * Remove unsafe query option `inspectSimplePlans`. This option previously
   defaulted to `true`, and turning it off could make particular queries fail.
   The option was ignored in the cluster previously, and turning it off only
